MISC #520 add banner to sign up page

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,6 @@
 - content_for :full do
   .full
+    = image_tag 'banner_sign.png'
     %h1
       注册成为吞迷
     %p 吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是吞迷是。
