--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -1,3 +1,15 @@
 ol.gridsies-halfsies li {
   width: auto !important;
 }
+
+.sign-prompt a {
+  margin-bottom: 10px;
+}
+
+form#avatar-form p.message {
+  color: #777777;
+  font-size: 0.9em;
+  line-height: 1.4;
+  margin: 0 0 10px;
+  padding: 8px 0 0;
+}
