--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -9,25 +9,17 @@
       pixels dribbbled
     %ul#footer-nav
       %li
-        %a#f-home{:href => "/site/about"} About
+        %a#f-home{:href => "/site/about"} 站点统计
       %li
-        %a{:href => "/site/faq"} FAQ
+        %a{:href => "/site/faq"} 新浪微博
       %li
-        %a{:href => "/site/contact"} Contact
+        %a{:href => "/site/contact"} 联系我们
       %li
-        %a{:href => "/site/advertise"} Advertise
+        %a{:href => "/site/advertise"} 广告合作
       %li
-        %a{:href => "/site/testimonials"} Testimonials
+        %a{:href => "/site/testimonials"} 吞食天地大同盟
       %li
-        %a{:href => "/site/handbook"} Handbook
-      %li
-        %a{:href => "/site/terms"} Terms
-      %li
-        %a{:href => "/site/privacy"} Privacy
-      %li
-        %a{:href => "/api"} API
-      %li
-        %a{:href => "http://equipment.dribbble.com/"} Equipment
+        %a{:href => "/site/privacy"} 隐私权限
     %p
       Copyright © 2009-2012 Dribbble LLC. All screenshots © their respective owners.
       %br/
