--- a/app/views/application/sidebars/_registration.html.haml
+++ b/app/views/application/sidebars/_registration.html.haml
@@ -1,7 +1,8 @@
 
 %h3 使用第三方帐号登录
 .sign-prompt
-  = link_to '使用微博帐号登录', '#', class: 'auth-weibo auth-top'
+  = link_to '使用微博帐号登录', '#', class: 'auth-weibo auth-top gray'
+  = link_to '使用腾讯帐号登录', '#', class: 'auth-weibo auth-top gray'
 
 %h3 作为一个吞迷，你可以玩转。。。
 
