--- a/app/views/application/tabs/_settings.html.haml
+++ b/app/views/application/tabs/_settings.html.haml
@@ -2,4 +2,4 @@
   = settings_link_to '基本资料', edit_profile_path
   = settings_link_to '密码设置', edit_user_registration_path
   = settings_link_to '第三方帐号绑定', '#'
-  = settings_link_to '提醒设置', '#'
+  = settings_link_to '提醒设置', my_notificaitons_path
