--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,3 +1,6 @@
+- content_for :sidebar do
+  = render '/application/sidebars/settings'
+
 - content_for :full do
   .group
     %a.pro-motion.not-pro{:href => "/account/pro"}
@@ -24,3 +27,23 @@
     .form-btns
       = f.button :submit, '保存设置', class: 'form-sub'
       = link_to '移除我的帐号', registration_path(resource), confirm: "Are you sure?", method: :delete, class: 'link'
+
+- content_for :javascript do
+  :javascript
+    new ShowAndHideControl({
+      target: '#avatar-form', 
+      showControl: '#edit_avatar_link', 
+      hideControl: '#cancel-avatar'
+    });
+
+    $('#delete-avatar-button').click(function() {
+      return confirm("Deleting avatar. Continue?");
+    });
+
+    $('h3.player-card a').
+      tipsy({
+        gravity: 'e',
+        html: true,
+        title: function() { return $('#player-card-tipsy-text').html(); }
+      }).
+      click(function() { return false; });
