FEATURE #527 - HOME PAGE styling

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -281,7 +281,7 @@ div.col-33-last {
   background: url(icon-signup.png) no-repeat 0 50%;
   }
 #nav li#t-profile a,
-body#shots #nav li#t-shots a,
+#nav li.active a,
 body#players #nav li#t-players a,
 body#explore #nav li#t-explore a,
 body#jobs #nav li#t-jobs a,
