--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,28 @@
 - content_for :sidebar do
   = render '/application/sidebars/home'
+
+- content_for :full do
+  .full.home_banner
+    %h1.compact
+      %strong 如果你还没有注册成为吞迷，
+      又怎么能称的上游戏达人呢？
+      = link_to '注册成为吞迷',new_user_registration_path, class: 'form-sub tagline-action'
+
+  = render 'sliders'
+
+
+.group.highlights
+  .multi.group
+    %h3.special
+      %span.special-flag.special-featured 推荐专题 >>
+      吞食天地2nd Evolution 进化
+    .topic_info.group
+      .cover= image_tag('examples/02.jpg')
+      .desc
+        在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。战斗过程除了普通攻击之外还有总攻击
+        和策略选项，体现了一定的战术性。
+    %ul.stats_bar
+      %li= link_to '下载', '#', class: 'download_btn'
+      %li
+        关注：
+        %span 27581
