--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -17,9 +17,11 @@
         %li#t-signin= link_to '登录', new_user_session_path
 
       %li#t-search= link_to image_tag('adapt-icon-search.png', alt: 'search'), '#search'
-      %li= link_to '首页', root_path
+      = main_nav :home do
+        = link_to '首页', root_path
       %li= link_to '应用', '#'
-      %li= link_to '专题', '#'
+      = main_nav :topics do
+        = link_to '专题', topics_path
       %li= link_to '下载', '#'
       %li= link_to '论坛', '#'
 
