--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,8 +21,13 @@
       .desc
         在本作中玩家扮演刘备，从第一章“黄巾之乱”开始，一直到最后篡改历史一统天下，总共分为八章。战斗过程除了普通攻击之外还有总攻击
         和策略选项，体现了一定的战术性。
-    %ul.stats_bar
+    %ul.stats_bar.group
       %li= link_to '下载', '#', class: 'download_btn'
       %li
         关注：
         %span 27581
+
+    %ul.articles.group
+      %li
+        %h3 吞食天地2nd  beta 1.0初章发布
+        %span.time 2008-7-22
