--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
             = yield
           
           #secondary= yield :sidebar
+
+          = yield :extra
         //content
     //wrap
     %hr/
