--- a/app/views/bbs/home/index.html.haml
+++ b/app/views/bbs/home/index.html.haml
@@ -1,38 +1,32 @@
-#left-wrap
-  = render 'slider'
+- content_for :full do
+  .full.home_banner
+    %h1.compact
+      %strong 如果你还没有注册成为吞迷，
+      又怎么能称的上游戏达人呢？
 
-  #tag-forum-wrap.tag-forum-index
-    - @main_boards.each do |board|
-      .tag-forum.tag-forum-index-border
-        .tag-forum-label
-          .badge-wrap.badge-forum
-            .badge= board.name
-          %ul
-            %li#forumtrigger-06202c.current-tag-forum-label
-              %a{:href => "%23%E7%8C%AB%E7%94%B5%E7%A3%81%E7%82%AE"}
-                %span 4
-                \#猫电磁炮
-              %em
-            %li#forumtrigger-ed3dea
-              %a{:href => "%23%E7%8C%AB%E7%94%B5%E7%A3%81%E7%82%AE%E7%9A%84%E6%BB%91%E9%9B%AA%E5%9C%BA"}
-                %span 1
-                \#猫电磁炮的滑雪场
-              %em
-            / %li.index-digger-tag
-            /   %a{:href => "~nico翻唱歌手的资源"} nico翻唱歌手的资源
-            /[if IE 8 ] <li class="ie-sucker"></li>
-        .forum-list-wrap.main_board
-          .notice= link_to '进入「猫电磁炮」的频道', '#', class: 'tag-forum-goto'
-          - board.children.each do |child|
-            .child_board.clearfix
-              .head_img= link_to image_tag(child.logo, size: '280x120'), bbs_board_path(child)
-              %h1= link_to child.name, bbs_board_path(child), class: 'topic_title'
-              %p.description= child.description.truncate(80)
-              %p
-                %span.admin
-                  版主：
-                  = link_to child.admin_name, '#'
-                %span.topics
-                  总帖数/精华帖：#{child.bbs_topics_count} / 0
+- content_for :sidebar do
+  = render '/application/sidebars/bbs'
 
-= render 'sidebar'
+#recommended_wrap
+
+#forum-wrap
+  - @main_boards.each do |board|
+    .forum
+      .forum-header.group
+        %h2
+          主板块：
+          = board.name
+        %p xxxxxx
+      .forum-list
+        %p.notice 本板块的最新消息，我们马上要出最新的版本了。希望大家踊跃参与。
+        - board.children.each do |child|
+          .child-board.group
+            .head_img= image_tag('examples/02.jpg')
+            %h3= link_to child.name, '#'
+            %p.description= child.description
+            %p
+              %span.admin
+                版主：
+                = link_to '西唯', '#'
+              %span.topics
+                总帖数/精华帖：0 / 0
