--- a/app/views/topics/_context_header.html.haml
+++ b/app/views/topics/_context_header.html.haml
@@ -3,22 +3,22 @@
     .wrap-topic-inner
       %ul
         = sec_nav :home do
-          = link_to '#' do
+          = link_to topic_path(@topic) do
             专题首页
             %small Topic Home
         = sec_nav :articles do
           = link_to [@topic, :topic_articles] do
             专题攻略
             %small Topic Strategy
-        %li
-          = link_to '#' do
+        = sec_nav :downloads do
+          = link_to [@topic, :topic_downloads] do
             资源下载
             %small Resources Download
-        %li
-          = link_to '#' do
+        = sec_nav :videos do
+          = link_to [@topic, :topic_videos] do
             视频前瞻
             %small Video Seeking
-        %li
-          = link_to '#' do
+        = sec_nav :photos do
+          = link_to [@topic, :topic_photos] do
             视觉盛宴
             %small Vision
