fix bug for backend

--- a/app/views/topics/index.html.haml
+++ b/app/views/topics/index.html.haml
@@ -40,7 +40,7 @@
           /     %img.photo.fn{:alt => "Twitter_avatar", :src => "http://dribbble.s3.amazonaws.com/users/49464/avatars/original/Twitter_Avatar.png?1340287646"} Felix, Gabriel
           %li.bucket-title-meta= resource.description
           %li.bucket-title-meta.bucket-title-time.project-title-time
-            %strong #{resource.articles_count} 篇文章
+            %strong #{resource.posts_count} 篇文章
             %span.sep= '|'
             %strong #{resource.videos_count} 个视频
             %span.sep= '|'
