--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title Twkunion
     %meta(content='text/html; charset=utf-8' http-equiv='content-type')
     %meta(content='width=device-width, initial-scale=1.0, minimum-scale=1.0' name='viewport')
+    <meta property="wb:webmaster" content="36188b653e22a3c9" />
+    <meta property="qc:admins" content="44172176776473561766375" />
 
     = stylesheet_link_tag :application, media: 'all'
     = javascript_include_tag :application
